@@ -3,18 +3,53 @@
 from lib import script
 
 ID = (
-	90000584, #桃
-	90000586, #緑
-	90000585, #藍
-	90000587, #山吹
-	90000588, #菫
-	90000589, #茜
-	90000590, #杏
-	90000591, #空
-	90000592, #胡桃
-	90000593, #若菜
-	90000594, #白
-	90000595, #黒
+	90000584, #桃ハート
+	90000586, #緑ハート
+	90000585, #藍ハート
+	90000587, #山吹ハート
+	90000588, #菫ハート
+	90000589, #茜ハート
+	90000590, #杏ハート
+	90000591, #空ハート
+	90000592, #胡桃ハート
+	90000593, #若菜ハート
+	90000594, #白ハート
+	90000595, #黒ハート
+	90000424, #ネコマタ（桃）用おでかけパーカー
+	90000542, #ネコマタ（桃）用メイド服
+	90000367, #ネコマタ（桃）キティラー服
+	90000390, #ネコマタ（緑）用カントリー服
+	90000482, #ネコマタ（緑）用戦闘制服
+	90000362, #ネコマタ（藍）用羽衣
+	90000443, #ネコマタ（藍）用黒セーラー
+	90000528, #ネコマタ（藍）用リボンワンピース
+	90000403, #ネコマタ（山吹）用和装
+	90000524, #ネコマタ（山吹）用ボーイッシュ服
+	90000418, #ネコマタ（菫）用おめかしワンピ
+	90000499, #ネコマタ（菫）用着物ワンピ
+	90000404, #ネコマタ（茜）用ハロウィン服
+	90000436, #ネコマタ（茜）用チャイナドレス
+	90000339, #ネコマタ（杏）用セーラー
+	90000448, #ネコマタ（杏）用エルブンジャケット
+	90000410, #ネコマタ（空）用怪盗服
+	90000475, #ネコマタ（空）用さざなみのワンピース
+	90000432, #ネコマタ（胡桃・若菜）用メイド服
+	90000357, #ネコマタ（胡桃・若菜）用水着
+	90000511, #ネコマタ(胡桃・若菜)用カボチャマント
+	90000391, #ネコマタ（白）用トップモデル服
+	90000449, #ネコマタ（白）用ウェディングドレス
+	90000513, #ネコマタ（白）用カボチャマント
+	90000343, #ネコマタ（黒）用騎士服
+	90000425, #ネコマタ（黒）用巫女服
+	90000512, #ネコマタ（黒）用カボチャマント
+	90000514, #ネコマタ（ミケ）用カボチャマント
+	90000515, #ネコマタ（トラ）用カボチャマント
+	90000516, #ネコマタ（アリス）用カボチャマント
+	90000517, #アメジスト用カボチャマント
+	90000518, #ルビー用カボチャマント
+	90000519, #トパーズ用カボチャマント
+	90000520, #サファイア用カボチャマント
+	90000521, #ダイヤモンド用カボチャマント
 )
 
 ITEM_EVENT_ID = {
@@ -27,7 +62,7 @@ ITEM_EVENT_ID = {
 	20050203: (10260004, 10260092), #ネコマタハート（茜）
 	20050204: (10260005, 10260093), #ネコマタハート（杏）
 	20050205: (10260006, 10260094), #ネコマタハート（空）
-	20050206: (10260000, 10260095), #ネコマタハート（胡桃）
+	20050206: (14240000, 10260095), #ネコマタハート（胡桃）
 	20050207: (14240000, 10260096), #ネコマタハート（若菜）
 	20050208: (14380000, 10260097), #ネコマタハート（白）
 	20050209: (14370000, 10260098), #ネコマタハート（黒）
@@ -40,7 +75,7 @@ ITEM_EVENT_ID = {
 	20050215: (10260004, 10260104), #茜用チェックリボンハート
 	20050216: (10260005, 10260105), #杏用チェックリボンハート
 	20050217: (10260006, 10260106), #空用チェックリボンハート
-	20050218: (10260000, 10260107), #胡桃用チェックリボンハート
+	20050218: (14240000, 10260107), #胡桃用チェックリボンハート
 	20050219: (14240000, 10260108), #若菜用チェックリボンハート
 	20050220: (14380000, 10260109), #白用チェックリボンハート
 	20050221: (14370000, 10260110), #黒用チェックリボンハート
@@ -53,7 +88,7 @@ ITEM_EVENT_ID = {
 	20050227: (10260004, 10260116), #茜用シャーマンハート
 	20050228: (10260005, 10260117), #杏用シャーマンハート
 	20050229: (10260006, 10260118), #空用シャーマンハート
-	20050230: (10260000, 10260119), #胡桃用シャーマンハート
+	20050230: (14240000, 10260119), #胡桃用シャーマンハート
 	20050231: (14240000, 10260120), #若菜用シャーマンハート
 	20050232: (14380000, 10260121), #白用シャーマンハート
 	20050233: (14370000, 10260122), #黒用シャーマンハート
@@ -66,7 +101,7 @@ ITEM_EVENT_ID = {
 	20050240: (10260004, 10260128), #茜用ファーコーデハート
 	20050241: (10260005, 10260129), #杏用ファーコーデハート
 	20050242: (10260006, 10260130), #空用ファーコーデハート
-	20050243: (10260000, 10260131), #胡桃用ファーコーデハート
+	20050243: (14240000, 10260131), #胡桃用ファーコーデハート
 	20050244: (14240000, 10260132), #若菜用ファーコーデハート
 	20050245: (14380000, 10260133), #白用ファーコーデハート
 	20050246: (14370000, 10260134), #黒用ファーコーデハート
@@ -79,7 +114,7 @@ ITEM_EVENT_ID = {
 	20050253: (10260004, 10260140), #茜用盗賊ハート
 	20050254: (10260005, 10260141), #杏用盗賊ハート
 	20050255: (10260006, 10260142), #空用盗賊ハート
-	20050256: (10260000, 10260143), #胡桃用盗賊ハート
+	20050256: (14240000, 10260143), #胡桃用盗賊ハート
 	20050257: (14240000, 10260144), #若菜用盗賊ハート
 	20050258: (14380000, 10260145), #白用盗賊ハート
 	20050259: (14370000, 10260146), #黒用盗賊ハート
@@ -92,7 +127,7 @@ ITEM_EVENT_ID = {
 	20050266: (10260004, 10260152), #茜用キンダーハート
 	20050267: (10260005, 10260153), #杏用キンダーハート
 	20050268: (10260006, 10260154), #空用キンダーハート
-	20050269: (10260000, 10260155), #胡桃用キンダーハート
+	20050269: (14240000, 10260155), #胡桃用キンダーハート
 	20050270: (14240000, 10260156), #若菜用キンダーハート
 	20050271: (14380000, 10260157), #白用キンダーハート
 	20050272: (14370000, 10260158), #黒用キンダーハート
@@ -105,7 +140,7 @@ ITEM_EVENT_ID = {
 	20050279: (10260004, 10260164), #茜用カンフーハート
 	20050280: (10260005, 10260165), #杏用カンフーハート
 	20050281: (10260006, 10260166), #空用カンフーハート
-	20050282: (10260000, 10260167), #胡桃用カンフーハート
+	20050282: (14240000, 10260167), #胡桃用カンフーハート
 	20050283: (14240000, 10260168), #若菜用カンフーハート
 	20050284: (14380000, 10260169), #白用カンフーハート
 	20050285: (14370000, 10260170), #黒用カンフーハート
@@ -118,7 +153,7 @@ ITEM_EVENT_ID = {
 	20050293: (10260004, 10260176), #茜用みやびハート
 	20050294: (10260005, 10260177), #杏用みやびハート
 	20050295: (10260006, 10260178), #空用みやびハート
-	20050296: (10260000, 10260179), #胡桃用みやびハート
+	20050296: (14240000, 10260179), #胡桃用みやびハート
 	20050297: (14240000, 10260180), #若菜用みやびハート
 	20050298: (14380000, 10260181), #白用みやびハート
 	20050299: (14370000, 10260182), #黒用みやびハート
@@ -131,7 +166,7 @@ ITEM_EVENT_ID = {
 	20050306: (10260004, 10260188), #茜用チルドレンハート
 	20050307: (10260005, 10260189), #杏用チルドレンハート
 	20050308: (10260006, 10260190), #空用チルドレンハート
-	20050309: (10260000, 10260191), #胡桃用チルドレンハート
+	20050309: (14240000, 10260191), #胡桃用チルドレンハート
 	20050310: (14240000, 10260192), #若菜用チルドレンハート
 	20050311: (14380000, 10260193), #白用チルドレンハート
 	20050312: (14370000, 10260194), #黒用チルドレンハート
@@ -144,7 +179,7 @@ ITEM_EVENT_ID = {
 	20050319: (10260004, 10260200), #茜用やんちゃハート
 	20050320: (10260005, 10260201), #杏用やんちゃハート
 	20050321: (10260006, 10260202), #空用やんちゃハート
-	20050322: (10260000, 10260203), #胡桃用やんちゃハート
+	20050322: (14240000, 10260203), #胡桃用やんちゃハート
 	20050323: (14240000, 10260204), #若菜用やんちゃハート
 	20050324: (14380000, 10260205), #白用やんちゃハート
 	20050325: (14370000, 10260206), #黒用やんちゃハート
@@ -157,7 +192,7 @@ ITEM_EVENT_ID = {
 	20050332: (10260004, 10260212), #茜用フェアリーハート
 	20050333: (10260005, 10260213), #杏用フェアリーハート
 	20050334: (10260006, 10260214), #空用フェアリーハート
-	20050335: (10260000, 10260215), #胡桃用フェアリーハート
+	20050335: (14240000, 10260215), #胡桃用フェアリーハート
 	20050336: (14240000, 10260216), #若菜用フェアリーハート
 	20050337: (14380000, 10260217), #白用フェアリーハート
 	20050338: (14370000, 10260218), #黒用フェアリーハート
@@ -170,7 +205,7 @@ ITEM_EVENT_ID = {
 	20050345: (10260004, 10260224), #茜用エキゾチックハート
 	20050346: (10260005, 10260225), #杏用エキゾチックハート
 	20050347: (10260006, 10260226), #空用エキゾチックハート
-	20050348: (10260000, 10260227), #胡桃用エキゾチックハート
+	20050348: (14240000, 10260227), #胡桃用エキゾチックハート
 	20050349: (14240000, 10260228), #若菜用エキゾチックハート
 	20050350: (14380000, 10260229), #白用エキゾチックハート
 	20050351: (14370000, 10260230), #黒用エキゾチックハート
@@ -183,7 +218,7 @@ ITEM_EVENT_ID = {
 	20050358: (10260004, 10260236), #茜用エレガントハート
 	20050359: (10260005, 10260237), #杏用エレガントハート
 	20050360: (10260006, 10260238), #空用エレガントハート
-	20050361: (10260000, 10260239), #胡桃用エレガントハート
+	20050361: (14240000, 10260239), #胡桃用エレガントハート
 	20050362: (14240000, 10260240), #若菜用エレガントハート
 	20050363: (14380000, 10260241), #白用エレガントハート
 	20050364: (14370000, 10260242), #黒用エレガントハート
@@ -196,7 +231,7 @@ ITEM_EVENT_ID = {
 	20050372: (10260004, 10260248), #茜用アイシクルハート
 	20050373: (10260005, 10260249), #杏用アイシクルハート
 	20050374: (10260006, 10260250), #空用アイシクルハート
-	20050375: (10260000, 10260251), #胡桃用アイシクルハート
+	20050375: (14240000, 10260251), #胡桃用アイシクルハート
 	20050376: (14240000, 10260252), #若菜用アイシクルハート
 	20050377: (14380000, 10260253), #白用アイシクルハート
 	20050378: (14370000, 10260254), #黒用アイシクルハート
@@ -209,7 +244,7 @@ ITEM_EVENT_ID = {
 	20050385: (10260004, 10260260), #茜用マリンハート
 	20050386: (10260005, 10260261), #杏用マリンハート
 	20050387: (10260006, 10260262), #空用マリンハート
-	20050388: (10260000, 10260263), #胡桃用マリンハート
+	20050388: (14240000, 10260263), #胡桃用マリンハート
 	20050389: (14240000, 10260264), #若菜用マリンハート
 	20050390: (14380000, 10260265), #白用マリンハート
 	20050391: (14370000, 10260266), #黒用マリンハート
@@ -222,7 +257,7 @@ ITEM_EVENT_ID = {
 	20050398: (10260004, 10260272), #茜用アラビアンハート
 	20050399: (10260005, 10260273), #杏用アラビアンハート
 	20050400: (10260006, 10260274), #空用アラビアンハート
-	20050401: (10260000, 10260275), #胡桃用アラビアンハート
+	20050401: (14240000, 10260275), #胡桃用アラビアンハート
 	20050402: (14240000, 10260276), #若菜用アラビアンハート
 	20050403: (14380000, 10260277), #白用アラビアンハート
 	20050404: (14370000, 10260278), #黒用アラビアンハート
@@ -235,7 +270,7 @@ ITEM_EVENT_ID = {
 	20050411: (10260004, 10260284), #茜用サイバーハート
 	20050412: (10260005, 10260285), #杏用サイバーハート
 	20050413: (10260006, 10260286), #空用サイバーハート
-	20050414: (10260000, 10260287), #胡桃用サイバーハート
+	20050414: (14240000, 10260287), #胡桃用サイバーハート
 	20050415: (14240000, 10260288), #若菜用サイバーハート
 	20050416: (14380000, 10260289), #白用サイバーハート
 	20050417: (14370000, 10260290), #黒用サイバーハート
@@ -248,7 +283,7 @@ ITEM_EVENT_ID = {
 	20050424: (10260004, 10260296), #茜用ワンダーハート
 	20050425: (10260005, 10260297), #杏用ワンダーハート
 	20050426: (10260006, 10260298), #空用ワンダーハート
-	20050427: (10260000, 10260299), #胡桃用ワンダーハート
+	20050427: (14240000, 10260299), #胡桃用ワンダーハート
 	20050428: (14240000, 10260300), #若菜用ワンダーハート
 	20050429: (14380000, 10260301), #白用ワンダーハート
 	20050430: (14370000, 10260302), #黒用ワンダーハート
@@ -261,7 +296,7 @@ ITEM_EVENT_ID = {
 	20050437: (10260004, 10260308), #茜用ノスタルジアハート
 	20050438: (10260005, 10260309), #杏用ノスタルジアハート
 	20050439: (10260006, 10260310), #空用ノスタルジアハート
-	20050440: (10260000, 10260311), #胡桃用ノスタルジアハート
+	20050440: (14240000, 10260311), #胡桃用ノスタルジアハート
 	20050441: (14240000, 10260312), #若菜用ノスタルジアハート
 	20050442: (14380000, 10260313), #白用ノスタルジアハート
 	20050443: (14370000, 10260314), #黒用ノスタルジアハート
@@ -274,7 +309,7 @@ ITEM_EVENT_ID = {
 	20050450: (10260004, 10260320), #茜用プリティフリルハート
 	20050451: (10260005, 10260321), #杏用プリティフリルハート
 	20050452: (10260006, 10260322), #空用プリティフリルハート
-	20050453: (10260000, 10260323), #胡桃用プリティフリルハート
+	20050453: (14240000, 10260323), #胡桃用プリティフリルハート
 	20050454: (14240000, 10260324), #若菜用プリティフリルハート
 	20050455: (14380000, 10260325), #白用プリティフリルハート
 	20050456: (14370000, 10260326), #黒用プリティフリルハート
@@ -287,10 +322,58 @@ ITEM_EVENT_ID = {
 	20050463: (10260004, 10260332), #茜用エクソシストハート
 	20050464: (10260005, 10260333), #杏用エクソシストハート
 	20050465: (10260006, 10260334), #空用エクソシストハート
-	20050466: (10260000, 10260335), #胡桃用エクソシストハート
+	20050466: (14240000, 10260335), #胡桃用エクソシストハート
 	20050467: (14240000, 10260336), #若菜用エクソシストハート
 	20050468: (14380000, 10260337), #白用エクソシストハート
 	20050469: (14370000, 10260338), #黒用エクソシストハート
+	#桃
+	20050147: (10260000, 10260065), #ネコマタ（桃）用おでかけパーカー
+	20050191: (10260000, 10260086), #ネコマタ（桃）用メイド服
+	20050138: (10260000, 10260058), #ネコマタ（桃）キティラー服
+	#緑
+	20050141: (10260050, 10260059), #ネコマタ（緑）用カントリー服
+	20050156: (10260050, 10260070), #ネコマタ（緑）用戦闘制服
+	#藍
+	20050136: (10260051, 10260057), #ネコマタ（藍）用羽衣
+	20050151: (10260051, 10260054), #ネコマタ（藍）用黒セーラー
+	20050179: (10260051, 10260085), #ネコマタ（藍）用リボンワンピース
+	#山吹
+	20050143: (10260052, 10260061), #ネコマタ（山吹）用和装
+	20050178: (10260052, 10260084), #ネコマタ（山吹）用ボーイッシュ服
+	#菫
+	20050146: (10260003, 10260064), #ネコマタ（菫）用おめかしワンピ
+	20050158: (10260003, 10260071), #ネコマタ（菫）用着物ワンピ
+	#茜
+	20050144: (10260004, 10260062), #ネコマタ（茜）用ハロウィン服
+	20050150: (10260004, 10260066), #ネコマタ（茜）用チャイナドレス
+	#杏
+	20050130: (10260005, 10260056), #ネコマタ（杏）用セーラー
+	20050152: (10260005, 10260067), #ネコマタ（杏）用エルブンジャケット
+	#空
+	20050145: (10260006, 10260063), #ネコマタ（空）用怪盗服
+	20050154: (10260006, 10260069), #ネコマタ（空）用さざなみのワンピース
+	#胡桃・若菜
+	20050149: (14240000, 14240002), #ネコマタ（胡桃・若菜）用メイド服
+	20050134: (14240000, 14240001), #ネコマタ（胡桃・若菜）用水着
+	20050166: (14240000, 10260073), #ネコマタ(胡桃・若菜)用カボチャマント
+	#白
+	20050142: (14380000, 10260060), #ネコマタ（白）用トップモデル服
+	20050153: (14380000, 10260068), #ネコマタ（白）用ウェディングドレス
+	20050168: (14380000, 10260075), #ネコマタ（白）用カボチャマント
+	#黒
+	20050131: (14370000, 14370001), #ネコマタ（黒）用騎士服
+	20050148: (14370000, 14370002), #ネコマタ（黒）用巫女服
+	20050167: (14370000, 10260074), #ネコマタ（黒）用カボチャマント
+	#etc
+	20050169: (14760000, 10260076), #ネコマタ（ミケ）用カボチャマント
+	20050170: (14810000, 10260077), #ネコマタ（トラ）用カボチャマント
+	20050171: (15280000, 10260078), #ネコマタ（アリス）用カボチャマント
+	#オートマタ
+	20050172: (14900000, 10260079), #アメジスト用カボチャマント
+	20050173: (14940000, 10260080), #ルビー用カボチャマント
+	20050174: (14960000, 10260081), #トパーズ用カボチャマント
+	20050175: (15240000, 10260082), #サファイア用カボチャマント
+	20050176: (15310000, 10260083), #ダイヤモンド用カボチャマント
 }
 
 def main(pc):
@@ -306,7 +389,7 @@ def main(pc):
 		if pet_item.pet_id != nekomata_info[0]:
 			script.msg(pc, "error: pet id != %s"%nekomata_info[0])
 			return
-		if pet_item.pet_pict_id == nekomata_info[1]:
+		if pc.pet.item[1].pict_id == nekomata_info[1]:
 			pet_pict_id = nekomata_info[0]
 		else:
 			pet_pict_id = nekomata_info[1]
